--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zhanhb</groupId>
     <artifactId>thymeleaf-layout-dialect</artifactId>
-    <version>1.4.0</version>
+    <version>1.4.1-BUILD-SNAPSHOT</version>
     <name>Thymeleaf Layout Dialect</name>
     <description>A dialect for Thymeleaf that allows you to use layout/decorator templates to style your content.</description>
     <url>https://github.com/zhanhb/thymeleaf-layout-dialect</url>
