--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ cache:
   directories:
     - $HOME/.m2/repository
 jdk:
+ - oraclejdk6
+ - oraclejdk7
  - oraclejdk8
 
 # No need to run tasks for dependencies
