equals null check, remove warnings

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
                         <arg>-J-Dfile.encoding=${file.encoding}</arg>
                     </compilerArgs>
                     <showDeprecation>true</showDeprecation>
+                    <debug>false</debug>
                 </configuration>
             </plugin>
             <plugin>
