--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>thymeleaf-layout-dialect</artifactId>
     <version>2.0.0-BUILD-SNAPSHOT</version>
     <name>Thymeleaf Layout Dialect</name>
-    <description>A dialect for Thymeleaf that allows you to use layout/decorator templates to style your content.</description>
+    <description>Thymeleaf Layout Dialect rewritten in java.</description>
     <url>https://github.com/zhanhb/thymeleaf-layout-dialect</url>
     <inceptionYear>2012</inceptionYear>
 
@@ -77,17 +77,23 @@
         </snapshotRepository>
     </distributionManagement>
     <properties>
+        <groovy.version>2.4.6</groovy.version>
         <java.version>1.8</java.version>
+        <javassist.version>3.20.0-GA</javassist.version>
+        <lombok.version>1.16.8</lombok.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <nekohtml.version>1.9.21</nekohtml.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <slf4j.version>1.7.12</slf4j.version>
+        <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
             <artifactId>nekohtml</artifactId>
-            <version>1.9.21</version>
+            <version>${nekohtml.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -99,30 +105,30 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>2.4.6</version>
+            <version>${groovy.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.8</version>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.12</version>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
-            <version>3.0.0.RELEASE</version>
+            <version>${thymeleaf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-testing</artifactId>
-            <version>3.0.0.RELEASE</version>
+            <version>${thymeleaf.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -200,6 +206,19 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.3</version>
                 <configuration>
@@ -246,7 +265,7 @@
                 <configuration>
                     <sources>
                         <source>
-                            <directory>${project.basedir}/Source</directory>
+                            <directory>${project.build.sourceDirectory}</directory>
                             <includes>
                                 <include>**/*.groovy</include>
                             </includes>
@@ -254,7 +273,7 @@
                     </sources>
                     <testSources>
                         <testSource>
-                            <directory>${project.basedir}/Tests</directory>
+                            <directory>${project.build.testSourceDirectory}</directory>
                             <includes>
                                 <include>**/*.groovy</include>
                             </includes>
