--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ install: true
 script:
   - mvn install -Dmaven.javadoc.skip=true
   - jdk_switcher use oraclejdk7 && mvn -Djava.version=1.7 surefire:test
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
