--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         </snapshotRepository>
     </distributionManagement>
     <properties>
+        <argLine></argLine><!-- placeholder recieved by surefire plugin -->
         <groovy.version>2.4.7</groovy.version>
         <java.version>1.8</java.version>
         <javassist.version>3.20.0-GA</javassist.version>
@@ -235,7 +236,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <argLine>-Dfile.encoding=${file.encoding}</argLine>
+                    <argLine>-Dfile.encoding=${file.encoding} -ea @{argLine}</argLine>
                     <includes>
                         <include>**/*Test.class</include>
                         <include>**/*Tests.class</include>
@@ -286,6 +287,25 @@
                         </testSource>
                     </testSources>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.7.201606060606</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
