--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         </snapshotRepository>
     </distributionManagement>
     <properties>
-        <argLine></argLine><!-- placeholder recieved by surefire plugin -->
+        <argLine>-Dfile.encoding=${file.encoding} -ea</argLine>
         <groovy.version>2.4.7</groovy.version>
         <java.version>1.8</java.version>
         <javassist.version>3.20.0-GA</javassist.version>
@@ -236,7 +236,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <argLine>-Dfile.encoding=${file.encoding} -ea @{argLine}</argLine>
                     <includes>
                         <include>**/*Test.class</include>
                         <include>**/*Tests.class</include>
@@ -294,6 +293,7 @@
                 <version>0.7.7.201606060606</version>
                 <executions>
                     <execution>
+                        <phase>validate</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
