--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,7 @@ cache:
   - $HOME/.m2
 jdk:
 - oraclejdk8
-install:
-- wget https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip
-- unzip -qq apache-maven-3.3.9-bin.zip
-- export M2_HOME=$PWD/apache-maven-3.3.9
-- export "PATH=$M2_HOME/bin:$PATH"
-- mvn deploy -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.deploy.skip=true -B -V
+install: mvn deploy -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.deploy.skip=true -B -V
 script:
 - mvn install -Dmaven.javadoc.skip=true
 - jdk_switcher use oraclejdk7 && mvn -Djava.version=1.7 surefire:test
