Move maven-gpg-plugin to profile release.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <id>zhanhb</id>
@@ -28,6 +29,7 @@
             <timezone>Asia/Shanghai</timezone>
         </developer>
     </developers>
+
     <contributors>
         <contributor>
             <name>Emanuel Rabina</name>
@@ -64,6 +66,7 @@
         <developerConnection>scm:git:git@github.com:zhanhb/thymeleaf-layout-dialect.git</developerConnection>
         <url>https://github.com/zhanhb/thymeleaf-layout-dialect</url>
     </scm>
+
     <distributionManagement>
         <repository>
             <id>sonatype-nexus-staging</id>
@@ -76,6 +79,7 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
+
     <properties>
         <argLine>-Dfile.encoding=${file.encoding} -ea</argLine>
         <groovy.version>2.4.7</groovy.version>
@@ -216,20 +220,6 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
@@ -334,4 +324,28 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
