--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
                     <fork>true</fork>
                     <compilerArgs>
