Revert "Use logback instead of slf4j for testing"
This reverts commit 3c6c2c372b03fa39cebddba30d3e393285ccd835.

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <nekohtml.version>1.9.22</nekohtml.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <slf4j.version>1.7.21</slf4j.version>
         <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
     </properties>
 
@@ -103,12 +104,6 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.7</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
@@ -131,6 +126,12 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
             <version>${groovy.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
