--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zhanhb</groupId>
     <artifactId>thymeleaf-layout-dialect</artifactId>
-    <version>2.0.1-BUILD-SNAPSHOT</version>
+    <version>2.0.1</version>
     <name>Thymeleaf Layout Dialect</name>
     <description>Thymeleaf Layout Dialect rewritten in java.</description>
     <url>https://github.com/zhanhb/thymeleaf-layout-dialect</url>
