Rename profile release to release-profile

--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>release-profile</id>
             <build>
                 <plugins>
                     <plugin>
