--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
     </distributionManagement>
 
     <properties>
+        <arguments>-Prelease-profile</arguments>
         <argLine>-Dfile.encoding=${file.encoding} -ea</argLine>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -232,7 +233,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
                 <configuration>
-                    <arguments>-Prelease-profile</arguments>
+                    <arguments>${arguments}</arguments>
                 </configuration>
             </plugin>
             <plugin>
