Add Implementation-Title and Specification-Title

--- a/pom.xml
+++ b/pom.xml
@@ -350,8 +350,10 @@
                             <manifestSection>
                                 <name>nz/net/ultraq/thymeleaf/expressions/</name>
                                 <manifestEntries>
-                                    <Specification-Version>1.1.2</Specification-Version>
+                                    <Implementation-Title>Thymeleaf Expression Processor</Implementation-Title>
                                     <Implementation-Version>1.1.2</Implementation-Version>
+                                    <Specification-Title>Thymeleaf Expression Processor</Specification-Title>
+                                    <Specification-Version>1.1.2</Specification-Version>
                                 </manifestEntries>
                             </manifestSection>
                         </manifestSections>
