--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <developer>
             <id>zhanhb</id>
             <name>Huangbin Zhan</name>
-            <email>zhanhb88@gmail.com</email>
+            <email>zhanhb88 at gmail.com</email>
             <roles>
                 <role>author</role>
                 <role>developer</role>
