--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jdk:
 install: ./mvnw deploy -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.deploy.skip=true -B -V
 script:
 - ./mvnw install -Dmaven.javadoc.skip=true
-- jdk_switcher use oraclejdk7 && ./mvnw -Djava.version=1.7 surefire:test
+- jdk_switcher use openjdk7 && ./mvnw -Djava.version=1.7 surefire:test
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 - jdk_switcher use oraclejdk8 && source .travis/publish.sh
