--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ jdk:
 - openjdk11
 install: ./mvnw deploy -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.deploy.skip=true -B -V
 script:
-- ./mvnw install -Dmaven.javadoc.skip=true
-- jdk_switcher use openjdk7 && ./mvnw -Djava.version=1.7 surefire:test
+- chmod +x .travis/build.sh && .travis/build.sh
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 - jdk_switcher use oraclejdk8 && [ "$TRAVIS_JDK_VERSION" == "oraclejdk8" ] && source .travis/publish.sh || true
