Upgrade to gmaven plugin 1.6.3

--- a/pom.xml
+++ b/pom.xml
@@ -519,7 +519,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.6.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -528,7 +528,7 @@
                             <goal>compile</goal>
                             <goal>addTestSources</goal>
                             <goal>addTestStubSources</goal>
-                            <goal>testCompile</goal>
+                            <goal>compileTests</goal>
                         </goals>
                     </execution>
                 </executions>
