--- a/pom.xml
+++ b/pom.xml
@@ -344,6 +344,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
